--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Little Lemon is a Mediterranean restaurant that offers fresh, authentic cuisine in a cozy, modern setting." />
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta name="og:description" content="Experience the flavors of the Mediterranean at Little Lemon. Reserve your table today!" />
+    <meta name="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
